<resources>
    <!-- CloudMarksAndroidApplication -->
    <string name="app_name">Cloud Marks Android</string>

    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_load">Load</string>
    <string name="main_menu_about">About…</string>


    <!-- Main View -->
    <string name="marks_folder_chevron"><![CDATA[>]]></string>

    <string name="mark_menu_open">Open</string>
    <string name="mark_menu_share_to">Share to…</string>
    <string name="mark_menu_copy_url">Copy URL</string>
    <string name="mark_menu_copy_title">Copy Title</string>
    <string name="mark_menu_fetch_favicon">Fetch Favicon</string>
    <string name="mark_menu_fetch_favicon_in_this_folder">Fetch Favicon in This Folder</string>

    <string name="mark_toast_copy_url">URLをクリップボードにコピーしました。</string>
    <string name="mark_toast_copy_title">タイトルをクリップボードにコピーしました。</string>

    <!-- Mark not found View -->
    <string name="mark_not_found">ブックマークが存在しません。</string>
    <string name="mark_empty_folder">空のブックマークフォルダです。</string>

    <!-- Settings / CloudMarksAndroidApplication -->
    <string name="pref_key_root">pref_root</string>

    <string name="pref_header_application">Application Settings</string>
    <string name="pref_key_application">pref_application</string>

    <string name="pref_header_google_drive">Google Drive Settings</string>
    <string name="pref_key_google_drive">pref_google_drive</string>

    <string name="pref_key_app_folder_name">pref_folder_name</string>
    <string name="pref_title_app_folder_name">Folder name on storage service</string>
    <string name="pref_default_app_folder_name">cloud_marks</string>

    <string name="pref_key_app_last_synced">pref_last_synced</string>
    <string name="pref_key_app_last_bookmark_modify">pref_last_bookmark_modify</string>

    <string name="pref_key_app_autosync">pref_autosync</string>
    <string name="pref_title_app_autosync">Sync frequency</string>
    <string-array name="pref_list_values_app_autosync">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string-array name="pref_list_titles_app_autosync">
        <item>Never</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>

    <string name="pref_key_app_last_opened_mark_id">pref_last_opened_mark_id</string>

    <!-- Settings / Google Drive -->
    <string name="pref_key_google_drive_connection">pref_gdrive_connection</string>
    <string name="pref_title_google_drive_connection">Google Drive Connection</string>
    <string name="pref_default_google_drive_connection">未接続</string>
    <string name="pref_key_google_drive_account">pref_gdrive_account</string>

    <string name="require_get_account_permission">Google Drive へのアクセスのためアカウント取得権限が必要です</string>
    <string name="granted_get_account_permission">アカウント取得権限が許可されました。\n再度接続を行なってください。</string>
    <string name="connect_to_google_drive">Google Drive へ接続します</string>
    <string name="disconnect_from_google_drive">Google Drive 接続を解除します</string>
    <string name="cant_confirm_user_account">アカウントが確認できませんでした(%1$d)</string>
    <string name="connecting_google_drive_denied">Google Drive との接続が許可されませんでした</string>
    <string name="connected_to_google_drive">Google Drive に接続しました</string>
    <string name="connected_to_google_drive_probably">Google Drive に接続したんじゃないかと思います</string>
    <string name="error_occurred_on_connecting">接続確認でエラーが発生しました</string>

    <!-- MarksService -->
    <string name="marks_service_auth_error_title">認証エラーが発生しました</string>
    <string name="marks_service_auth_error_text">認証処理でエラーが発生しました。\n設定画面から認証をやり直してみてください。</string>
    <string name="marks_service_error_title">何かエラーが発生しました</string>
    <string name="marks_service_progress_folder">フォルダ %s を処理しています……</string>
    <string name="marks_service_progress_notification_title">ブックマークを%sしています</string>
    <string name="marks_service_action_load_title">ロード</string>
    <string name="marks_service_action_save_title">セーブ</string>
    <string name="marks_service_action_merge_title">マージ</string>
    <string name="marks_service_action_done">処理が完了しました</string>

    <!-- FaviconService -->
    <string name="favicon_toast_fetch">Faviconを取得しました。</string>
    <string name="favicon_toast_fetch_error">Faviconの取得に失敗、あるいはFaviconが存在しませんでした。</string>
    <string name="favicon_service_progress_notification_title">Faviconを取得しています</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
