<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/main_menu_settings"
    android:key="@string/pref_key_root">

    <PreferenceScreen
        android:title="@string/pref_header_application"
        android:icon="@drawable/ic_cloud_circle_black_24dp"
        android:fragment="to.sava.cloudmarksandroid.activities.SettingsActivity$ApplicationPreferenceFragment"
        android:key="@string/pref_key_application">

        <EditTextPreference
            android:id="@+id/pref_app_folder_name"
            android:capitalize="none"
            android:defaultValue="@string/pref_default_app_folder_name"
            android:inputType="text"
            android:key="@string/pref_key_app_folder_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_app_folder_name" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_list_titles_app_autosync"
            android:entryValues="@array/pref_list_values_app_autosync"
            android:key="@string/pref_key_app_autosync"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:enabled="false"
            android:title="@string/pref_title_app_autosync" />

    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/pref_header_google_drive"
        android:icon="@drawable/ic_google_drive"
        android:fragment="to.sava.cloudmarksandroid.activities.SettingsActivity$GoogleDrivePreferenceFragment"
        android:key="@string/pref_key_google_drive">

        <SwitchPreference
            android:id="@+id/pref_google_drive_connection"
            android:defaultValue="false"
            android:key="@string/pref_key_google_drive_connection"
            android:summary="@string/pref_default_google_drive_connection"
            android:title="@string/pref_title_google_drive_connection" />

    </PreferenceScreen>
</PreferenceScreen>