<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_app_folder_name"
        android:inputType="text"
        android:key="@string/pref_key_app_folder_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_app_folder_name" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_list_titles_app_autosync"
        android:entryValues="@array/pref_list_values_app_autosync"
        android:key="@string/pref_key_app_autosync"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:enabled="false"
        android:title="@string/pref_title_app_autosync" />

</PreferenceScreen>
